--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -2,6 +2,14 @@
   "@_0__left": {
     "message": "$${0} gauche"
   },
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "$${0} sera bloqué sur ce site web.",
+    "description": "A tracker will be trusted on this website."
+  },
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0} sera autorisé sur ce site web.",
+    "description": "A tracker will be trusted on this website."
+  },
   "1_day": {
     "message": "1 jour"
   },
@@ -17,8 +25,23 @@
   "ad_blocking": {
     "message": "Blocage de publicité"
   },
-  "additional_permissions_required": {
-    "message": "Permissions supplémentaires requises"
+  "add": {
+    "message": "Ajouter"
+  },
+  "add_@_0__as_exception": {
+    "message": "Ajouter $${0} comme exception",
+    "description": "Add domain as exception"
+  },
+  "add_website_exception": {
+    "message": "Ajouter une exception de site web"
+  },
+  "adjusted___tracker": {
+    "message": "ajusté",
+    "description": "Singular form - tracker has been adjusted"
+  },
+  "adjusted___tracker_list": {
+    "message": "Ajusté",
+    "description": "Plural form - list of adjusted trackers"
   },
   "adult_advertising": {
     "message": "Publicités réservées aux publics adultes",
@@ -56,8 +79,34 @@
   "become_a_contributor": {
     "message": "Devenez donateur"
   },
+  "block_all__recommended_": {
+    "message": "Tout bloquer (recommandé)"
+  },
+  "block_on_this_website": {
+    "message": "Bloquer sur ce site web"
+  },
+  "blocked": {
+    "message": "Bloqué"
+  },
+  "blocked___tracker_list": {
+    "message": "Bloqué",
+    "description": "Plural form - list of blocked trackers"
+  },
+  "blocked__@_0_": {
+    "message": "Bloqués : $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
+  },
+  "blocked_on_all_websites": {
+    "message": "Bloqués sur tous les sites web"
+  },
+  "blocked_on_this_website": {
+    "message": "Bloqués sur ce site web"
+  },
   "cancel": {
     "message": "Annuler"
+  },
+  "category": {
+    "message": "Catégorie"
   },
   "cdn": {
     "message": "CDN",
@@ -68,6 +117,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Cliquez sur l'icône de puzzle en regard de la barre de recherche et épinglez Ghostery à votre barre d'outils."
+  },
+  "collapse": {
+    "message": "Réduire"
   },
   "comments": {
     "message": "Commentaires",
@@ -83,14 +135,24 @@
   "contact_support": {
     "message": "Contacter l'assistance"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "Contribuer à la base de données de trackers de Ghostery sur Github"
+  },
   "contributor": {
     "message": "Contributeur"
   },
   "copied_to_clipboard": {
     "message": "Copié dans le presse-papiers"
   },
+  "country": {
+    "message": "Pays"
+  },
   "create_account": {
     "message": "Créer un compte"
+  },
+  "current_protection_status_for_@_0__": {
+    "message": "Statut de protection actuel pour $${0} :",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "Interaction avec les clients",
@@ -109,7 +171,7 @@
     "message": "Désactiver Ghostery"
   },
   "disable_trackers_preview": {
-    "message": "Désact. aperçu des mouchards"
+    "message": "Désactiver l'aperçu des trackers"
   },
   "disabled": {
     "message": "Désactivé"
@@ -154,9 +216,15 @@
   "enabled": {
     "message": "Activé"
   },
+  "enter_website_url": {
+    "message": "Saisir l'URL du site web"
+  },
   "essential": {
     "message": "Essentiels",
     "description": "Tracker category name"
+  },
+  "expand": {
+    "message": "Développer"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Étendez le blocage des publicités de Ghostery aux moteurs de recherche en quelques étapes simples."
@@ -164,6 +232,9 @@
   "extensions": {
     "message": "Extensions",
     "description": "Tracker category name"
+  },
+  "for_all_websites": {
+    "message": "Pour tous les sites web"
   },
   "for_more_information_read_our_full": {
     "message": "Pour plus d'information, lisez notre"
@@ -190,7 +261,7 @@
     "message": "Il n'y a rien à faire sur cette page pour Ghostery"
   },
   "ghostery_is_all_set_to_stop_trackers_in_their_tracks_and_protect_your_privacy_while_browsing_": {
-    "message": "Ghostery est prêt à protéger votre vie privée en mettant en échec les mouchards quand vous naviguez !"
+    "message": "Ghostery est prêt à protéger votre vie privée en mettant en échec les trackers quand vous naviguez !"
   },
   "ghostery_is_disabled": {
     "message": "Ghostery est désactivé"
@@ -254,7 +325,7 @@
     "message": "Des informations sur les trackers web seront partagées conformément à notre <a href=\"$${0}\">politique de confidentialité</a>"
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Les informations sur les traqueurs web seront partagées conformément à notre <a href=\"$${0}\">Politique de confidentialité</a>, afin de renforcer la protection de la vie privée de la communauté Ghostery."
+    "message": "Les informations sur les trackers web seront partagées conformément à notre <a href=\"$${0}\">Politique de confidentialité</a>, afin de renforcer la protection de la vie privée de la communauté Ghostery."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
     "message": "Il existe grâce aux micro-contributions de chaque utilisateur de Ghostery qui choisit d'envoyer des informations non personnelles à WhoTracks.Me. Ces informations permettent à Ghostery de fournir des renseignements en temps réel sur les trackers, ce qui permet de protéger l'ensemble de la communauté Ghostery."
@@ -274,6 +345,9 @@
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "En savoir plus sur les défis de YouTube face aux bloqueurs de publicité."
   },
+  "load_more": {
+    "message": "Charger plus"
+  },
   "manifest_name": {
     "message": "Ghostery Bloqueur de Traqueurs et de Publicités - confidentialité"
   },
@@ -290,8 +364,14 @@
     "message": "Divers",
     "description": "Tracker category name"
   },
+  "modify_the_recommended_blocking_settings_for_every_website_": {
+    "message": "Modifiez les réglages de blocage recommandés pour chaque site web."
+  },
   "more_ad_blocking_available": {
     "message": "Davantage de blocage de publicités disponible"
+  },
+  "more_in_this_organization": {
+    "message": "Plus dans cette organisation"
   },
   "my_account": {
     "message": "Mon compte"
@@ -302,14 +382,20 @@
   "never_consent": {
     "message": "Never-Consent"
   },
-  "no_trackers_detected": {
-    "message": "Pas de trackers détectés"
+  "no_activities_detected": {
+    "message": "Aucune activité détectée"
+  },
+  "no_websites_exceptions_added_yet": {
+    "message": "Aucune exception de site web ajoutée pour l'instant"
   },
   "number_of_trackers_with_blocked_network_requests_": {
-    "message": "Nombre de mouchards avec des demandes de réseau bloquées."
+    "message": "Nombre de trackers avec des requêtes réseau bloquées."
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
     "message": "Nombre de mouchards avec des empreintes ou des cookies supprimés."
+  },
+  "observed_activities": {
+    "message": "Activités observées"
   },
   "off": {
     "message": "désactivé"
@@ -323,9 +409,18 @@
   "open_youtube_in_a_private_window": {
     "message": "Ouvre YouTube dans une fenêtre privée"
   },
+  "organization": {
+    "message": "Organisation"
+  },
+  "organization_s_website": {
+    "message": "Site web de l'organisation"
+  },
   "other": {
     "message": "Non-classés",
     "description": "Tracker category name"
+  },
+  "our_recommendation_for_this_activity": {
+    "message": "Notre recommandation pour cette activité"
   },
   "pause_on_this_site": {
     "message": "Pause sur ce site"
@@ -357,6 +452,9 @@
   "privacy_protection": {
     "message": "Protection de la vie privée"
   },
+  "protection_status": {
+    "message": "Statut de protection"
+  },
   "read_more_on_whotracks_me": {
     "message": "Plus d'informations sur WhoTracks.Me"
   },
@@ -375,14 +473,23 @@
   "resume": {
     "message": "Reprendre"
   },
+  "save": {
+    "message": "Enregistrer"
+  },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "Enregistrez et synchronisez vos paramètres personnalisés sur vos navigateurs et vos appareils."
   },
   "search_engine_redirect_protection": {
     "message": "Protection contre les redirections dans les moteurs de recherche"
   },
+  "search_for_a_tracker_or_organization___": {
+    "message": "Recherche une tracker ou une organisation..."
+  },
   "search_website___": {
     "message": "Rechercher sur le site..."
+  },
+  "set_blocking_preference": {
+    "message": "Définir la préférence de blocage"
   },
   "settings": {
     "message": "Paramètres"
@@ -392,6 +499,9 @@
   },
   "setup_successful": {
     "message": "Configuration réussie"
+  },
+  "show_all": {
+    "message": "Tout afficher"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "Affiche l'aperçu des trackers à côté des résultats de recherche."
@@ -424,28 +534,54 @@
     "message": "Conditions générales d'utilisation"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "Merci de soutenir la lutte de Ghostery pour un Web où la vie privée est un droit humain fondamental !"
+  },
+  "tracker_database": {
+    "message": "Fichage de traqueurs"
+  },
+  "trackers": {
+    "message": "Trackers"
   },
   "trackers_blocked": {
-    "message": "Mouchards bloqués"
+    "message": "Trackers bloqués"
   },
   "trackers_count": {
     "message": "Trackers comptés"
   },
-  "trackers_detected": {
-    "message": "Trackers détectés"
-  },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
-    "message": "Mouchards détectés par Ghostery sur ce site :&nbsp;$${0}"
+    "message": "Trackers détectés par Ghostery sur ce site :&nbsp;$${0}"
   },
   "trackers_modified": {
-    "message": "Mouchards modifiés"
+    "message": "Trackers modifiés"
   },
   "trackers_preview": {
-    "message": "Aperçu mouchards"
+    "message": "Aperçu des trackers"
   },
   "trackers_wheel": {
     "message": "Camembert des trackers"
+  },
+  "trust_all__recommended_": {
+    "message": "Faire confiance à tous (recommandé)"
+  },
+  "trust_on_this_website": {
+    "message": "Autoriser sur ce site web"
+  },
+  "trusted": {
+    "message": "Autorisé"
+  },
+  "trusted___tracker_list": {
+    "message": "Autorisé",
+    "description": "Plural form - list of trusted trackers"
+  },
+  "trusted__@_0_": {
+    "message": "Autorisés : $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
+  },
+  "trusted_on_all_websites": {
+    "message": "Autorisés sur tous les sites web"
+  },
+  "trusted_on_this_website": {
+    "message": "Autorisés sur ce site web"
   },
   "unidentified": {
     "message": "Non identifié",
@@ -460,6 +596,9 @@
   "urls_observed": {
     "message": "URL observées"
   },
+  "view_activity_details": {
+    "message": "Afficher les détails de l'activité"
+  },
   "visit_our_blog": {
     "message": "Visite notre blog"
   },
@@ -471,6 +610,9 @@
   },
   "website": {
     "message": "Site Web"
+  },
+  "website_exceptions": {
+    "message": "Exceptions de site web"
   },
   "websites": {
     "message": "Sites Web"
@@ -497,7 +639,7 @@
     "message": "Sans activation des fonctionnalités de confidentialité, seule la fonction de base identifiant les traqueurs est disponible."
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "Vous êtes super !"
   },
   "you_are_signed_in_as_": {
     "message": "Vous êtes connecté en tant que :"
