--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -2,6 +2,14 @@
   "@_0__left": {
     "message": "queda $${0}"
   },
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "Se bloqueará el rastreador $${0} en este sitio web.",
+    "description": "A tracker will be trusted on this website."
+  },
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "Se considerará de confianza el rastreador $${0} en este sitio web.",
+    "description": "A tracker will be trusted on this website."
+  },
   "1_day": {
     "message": "1 día"
   },
@@ -17,8 +25,23 @@
   "ad_blocking": {
     "message": "Bloqueador de anuncios"
   },
-  "additional_permissions_required": {
-    "message": "Se requieren permisos adicionales"
+  "add": {
+    "message": "Añadir"
+  },
+  "add_@_0__as_exception": {
+    "message": "Añadir $${0} a modo excepción",
+    "description": "Add domain as exception"
+  },
+  "add_website_exception": {
+    "message": "Añadir excepción de sitio web"
+  },
+  "adjusted___tracker": {
+    "message": "ajustado",
+    "description": "Singular form - tracker has been adjusted"
+  },
+  "adjusted___tracker_list": {
+    "message": "Ajustado",
+    "description": "Plural form - list of adjusted trackers"
   },
   "adult_advertising": {
     "message": "Publicidad para adultos",
@@ -56,8 +79,34 @@
   "become_a_contributor": {
     "message": "Conviértete en Contribuyente"
   },
+  "block_all__recommended_": {
+    "message": "Bloquear todo (recomendado)"
+  },
+  "block_on_this_website": {
+    "message": "Bloquear en este sitio web"
+  },
+  "blocked": {
+    "message": "Bloqueado"
+  },
+  "blocked___tracker_list": {
+    "message": "Bloqueado",
+    "description": "Plural form - list of blocked trackers"
+  },
+  "blocked__@_0_": {
+    "message": "Bloqueados: $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
+  },
+  "blocked_on_all_websites": {
+    "message": "Bloqueado en todos los sitios web"
+  },
+  "blocked_on_this_website": {
+    "message": "Bloqueado en este sitio web"
+  },
   "cancel": {
     "message": "Cancelar"
+  },
+  "category": {
+    "message": "Categoría"
   },
   "cdn": {
     "message": "CDN",
@@ -68,6 +117,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Haz clic en el icono con forma de puzle que está junto a la barra de búsqueda y ancla Ghostery a la barra de herramientas."
+  },
+  "collapse": {
+    "message": "Contraer"
   },
   "comments": {
     "message": "Comentarios",
@@ -83,14 +135,24 @@
   "contact_support": {
     "message": "Contacta con asistencia"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "Colabora con la base de datos de rastreadores de Ghostery en Github"
+  },
   "contributor": {
     "message": "Colaborador"
   },
   "copied_to_clipboard": {
     "message": "Copiado al portapapeles"
   },
+  "country": {
+    "message": "País"
+  },
   "create_account": {
     "message": "Crear una cuenta"
+  },
+  "current_protection_status_for_@_0__": {
+    "message": "Estado de protección actual de $${0}:",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "Interacción con el cliente",
@@ -154,9 +216,15 @@
   "enabled": {
     "message": "Habilitado"
   },
+  "enter_website_url": {
+    "message": "Introduce la URL del sitio web"
+  },
   "essential": {
     "message": "Esencial",
     "description": "Tracker category name"
+  },
+  "expand": {
+    "message": "Expandir"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Amplía el bloqueo de anuncios de Ghostery a los buscadores en unos sencillos pasos."
@@ -164,6 +232,9 @@
   "extensions": {
     "message": "Extensiones",
     "description": "Tracker category name"
+  },
+  "for_all_websites": {
+    "message": "Para todos los sitios web"
   },
   "for_more_information_read_our_full": {
     "message": "Para obtener más información, lee todos nuestros"
@@ -274,6 +345,9 @@
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "Más información sobre los desafíos de YouTube a los bloqueadores de anuncios"
   },
+  "load_more": {
+    "message": "Cargar más"
+  },
   "manifest_name": {
     "message": "Ghostery Rastreador & Bloqueador de anuncios - Privacidad AdBlock"
   },
@@ -290,8 +364,14 @@
     "message": "Miscelánea",
     "description": "Tracker category name"
   },
+  "modify_the_recommended_blocking_settings_for_every_website_": {
+    "message": "Modifica los ajustes de bloqueo recomendados de todos los sitios web."
+  },
   "more_ad_blocking_available": {
     "message": "Más bloqueo de anuncios disponible"
+  },
+  "more_in_this_organization": {
+    "message": "Más en esta organización"
   },
   "my_account": {
     "message": "Mi cuenta"
@@ -302,14 +382,20 @@
   "never_consent": {
     "message": "Never-Consent"
   },
-  "no_trackers_detected": {
-    "message": "No se detectaron rastreadores"
+  "no_activities_detected": {
+    "message": "No se detectaron actividades"
+  },
+  "no_websites_exceptions_added_yet": {
+    "message": "No se ha añadido aún ninguna excepción"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "Número de rastreadores con solicitudes de red bloqueadas."
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
     "message": "Número de rastreadores con cookies o huellas dactilares eliminadas."
+  },
+  "observed_activities": {
+    "message": "Actividades observadas"
   },
   "off": {
     "message": "No"
@@ -323,9 +409,18 @@
   "open_youtube_in_a_private_window": {
     "message": "Abrir YouTube en una ventana privada"
   },
+  "organization": {
+    "message": "Organización"
+  },
+  "organization_s_website": {
+    "message": "Sitio web de la organización"
+  },
   "other": {
     "message": "Otros",
     "description": "Tracker category name"
+  },
+  "our_recommendation_for_this_activity": {
+    "message": "Lo que recomendamos para esta actividad"
   },
   "pause_on_this_site": {
     "message": "Pausa en este sitio"
@@ -357,6 +452,9 @@
   "privacy_protection": {
     "message": "Protección de la privacidad"
   },
+  "protection_status": {
+    "message": "Estado de protección"
+  },
   "read_more_on_whotracks_me": {
     "message": "Leer más sobre WhoTracks.Me"
   },
@@ -375,14 +473,23 @@
   "resume": {
     "message": "Reactivar"
   },
+  "save": {
+    "message": "Guardar"
+  },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "Guarda y sincroniza tus ajustes personalizados en todos tus navegadores y dispositivos."
   },
   "search_engine_redirect_protection": {
     "message": "Protección frente al redireccionamiento en buscadores"
   },
+  "search_for_a_tracker_or_organization___": {
+    "message": "Busca un Rastreador u organización..."
+  },
   "search_website___": {
     "message": "Buscar sitio web..."
+  },
+  "set_blocking_preference": {
+    "message": "Establecer preferencia de bloqueo"
   },
   "settings": {
     "message": "Ajustes"
@@ -392,6 +499,9 @@
   },
   "setup_successful": {
     "message": "La configuración ha terminado"
+  },
+  "show_all": {
+    "message": "Mostrar todo"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "Muestra la vista previa de rastreadores junto a los resultados de la búsqueda."
@@ -424,16 +534,19 @@
     "message": "Términos y condiciones"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "Gracias por tu apoyo a Ghostery en su afán por lograr que la privacidad sea un derecho humano básico en Internet."
+  },
+  "tracker_database": {
+    "message": "Base de datos de rastreadores"
+  },
+  "trackers": {
+    "message": "Rastreadores"
   },
   "trackers_blocked": {
     "message": "Rastreadores bloqueados"
   },
   "trackers_count": {
     "message": "Número de rastreadores"
-  },
-  "trackers_detected": {
-    "message": "Rastreadores detectados"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Rastreadores detectados por Ghostery en esta página web:&nbsp;$${0}"
@@ -446,6 +559,29 @@
   },
   "trackers_wheel": {
     "message": "Rueda de rastreadores"
+  },
+  "trust_all__recommended_": {
+    "message": "Confiar en todos (recomendado)"
+  },
+  "trust_on_this_website": {
+    "message": "Confiar en este sitio web"
+  },
+  "trusted": {
+    "message": "De confianza"
+  },
+  "trusted___tracker_list": {
+    "message": "De confianza",
+    "description": "Plural form - list of trusted trackers"
+  },
+  "trusted__@_0_": {
+    "message": "De confianza: $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
+  },
+  "trusted_on_all_websites": {
+    "message": "De confianza en todos los sitios web"
+  },
+  "trusted_on_this_website": {
+    "message": "De confianza en este sitio web"
   },
   "unidentified": {
     "message": "Sin identificar",
@@ -460,6 +596,9 @@
   "urls_observed": {
     "message": "URL observadas"
   },
+  "view_activity_details": {
+    "message": "Ver detalles de la actividad"
+  },
   "visit_our_blog": {
     "message": "Visita nuestro blog"
   },
@@ -471,6 +610,9 @@
   },
   "website": {
     "message": "Sitio web"
+  },
+  "website_exceptions": {
+    "message": "Excepciones de sitios web"
   },
   "websites": {
     "message": "Sitios web"
@@ -497,7 +639,7 @@
     "message": "Sin las funciones de privacidad activadas, solo la funcionalidad básica de identificar rastreadores está disponible."
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "¡Eres genial!"
   },
   "you_are_signed_in_as_": {
     "message": "Iniciaste sesión como:"
