--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -2,6 +2,14 @@
   "@_0__left": {
     "message": "$${0} rimasti"
   },
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "$${0} sarà bloccato su questo sito.",
+    "description": "A tracker will be trusted on this website."
+  },
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0} sarà considerato affidabile su questo sito.",
+    "description": "A tracker will be trusted on this website."
+  },
   "1_day": {
     "message": "1 giorno"
   },
@@ -17,8 +25,23 @@
   "ad_blocking": {
     "message": "Blocco pubblicità"
   },
-  "additional_permissions_required": {
-    "message": "Ulteriori permessi richiesti"
+  "add": {
+    "message": "Aggiungi"
+  },
+  "add_@_0__as_exception": {
+    "message": "Aggiungi $${0} come eccezione",
+    "description": "Add domain as exception"
+  },
+  "add_website_exception": {
+    "message": "Aggiungi un’eccezione al sito"
+  },
+  "adjusted___tracker": {
+    "message": "regolazione effettuata",
+    "description": "Singular form - tracker has been adjusted"
+  },
+  "adjusted___tracker_list": {
+    "message": "Regolazione effettuata",
+    "description": "Plural form - list of adjusted trackers"
   },
   "adult_advertising": {
     "message": "Pubblicità per Adulti",
@@ -56,8 +79,34 @@
   "become_a_contributor": {
     "message": "Diventa un collaboratore"
   },
+  "block_all__recommended_": {
+    "message": "Blocca tutti (consigliato)"
+  },
+  "block_on_this_website": {
+    "message": "Blocca su questo sito"
+  },
+  "blocked": {
+    "message": "Bloccati"
+  },
+  "blocked___tracker_list": {
+    "message": "Bloccati",
+    "description": "Plural form - list of blocked trackers"
+  },
+  "blocked__@_0_": {
+    "message": "Bloccati: $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
+  },
+  "blocked_on_all_websites": {
+    "message": "Blocco effettuato su tutti i siti"
+  },
+  "blocked_on_this_website": {
+    "message": "Blocco effettuato su questo sito"
+  },
   "cancel": {
     "message": "Annulla"
+  },
+  "category": {
+    "message": "Categoria"
   },
   "cdn": {
     "message": "CDN",
@@ -68,6 +117,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Cliccare sull’icona del puzzle accanto alla barra di ricerca e blocca Ghostery nella barra degli strumenti."
+  },
+  "collapse": {
+    "message": "Comprimi"
   },
   "comments": {
     "message": "Commenti",
@@ -83,14 +135,24 @@
   "contact_support": {
     "message": "Contatta l'assistenza"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "Contribuisci al database di tracker di Ghostery su Github"
+  },
   "contributor": {
     "message": "Collaboratore"
   },
   "copied_to_clipboard": {
     "message": "Copiato negli appunti"
   },
+  "country": {
+    "message": "Paese"
+  },
   "create_account": {
     "message": "Crea Account"
+  },
+  "current_protection_status_for_@_0__": {
+    "message": "Attuale stato di protezione per $${0}:",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "Interazione Cliente",
@@ -154,9 +216,15 @@
   "enabled": {
     "message": "Attivato"
   },
+  "enter_website_url": {
+    "message": "Inserire l'URL del sito web"
+  },
   "essential": {
     "message": "Essenziali",
     "description": "Tracker category name"
+  },
+  "expand": {
+    "message": "Espandi"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "Estendi il blocco delle pubblicità di Ghostery anche ai motori di ricerca in pochi semplici passi."
@@ -164,6 +232,9 @@
   "extensions": {
     "message": "Estensioni",
     "description": "Tracker category name"
+  },
+  "for_all_websites": {
+    "message": "Per tutti i siti"
   },
   "for_more_information_read_our_full": {
     "message": "Per maggiori informazioni, visita il nostro sito"
@@ -274,6 +345,9 @@
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "Per saperne di più sulle sfide di YouTube agli ad blocker"
   },
+  "load_more": {
+    "message": "Carica altro"
+  },
   "manifest_name": {
     "message": "Ghostery Blocco Annunci e Tracker - Privacy AdBlock"
   },
@@ -290,8 +364,14 @@
     "message": "Varie",
     "description": "Tracker category name"
   },
+  "modify_the_recommended_blocking_settings_for_every_website_": {
+    "message": "Modifica le impostazioni di blocco consigliate per ciascun sito."
+  },
   "more_ad_blocking_available": {
     "message": "Ulteriore blocco delle pubblicità disponibile"
+  },
+  "more_in_this_organization": {
+    "message": "Altro in questa organizzazione"
   },
   "my_account": {
     "message": "Il Mio Account"
@@ -302,14 +382,20 @@
   "never_consent": {
     "message": "Never-Cosent"
   },
-  "no_trackers_detected": {
-    "message": "Nessun tracker rilevato"
+  "no_activities_detected": {
+    "message": "Nessuna attività rilevata"
+  },
+  "no_websites_exceptions_added_yet": {
+    "message": "Nessuna eccezione ai siti web è stata ancora aggiunta"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "Numero di tracker con richieste di rete bloccate."
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
     "message": "Numero di tracker con cookie o impronte digitali rimossi."
+  },
+  "observed_activities": {
+    "message": "Attività osservate"
   },
   "off": {
     "message": "Disattivato"
@@ -323,9 +409,18 @@
   "open_youtube_in_a_private_window": {
     "message": "Aprire YouTube in una finestra privata"
   },
+  "organization": {
+    "message": "Organizzazione"
+  },
+  "organization_s_website": {
+    "message": "Sito dell’organizzazione"
+  },
   "other": {
     "message": "Altro",
     "description": "Tracker category name"
+  },
+  "our_recommendation_for_this_activity": {
+    "message": "Il nostro consiglio per questa attività"
   },
   "pause_on_this_site": {
     "message": "Pausa su questo sito"
@@ -357,6 +452,9 @@
   "privacy_protection": {
     "message": "Protezione della privacy"
   },
+  "protection_status": {
+    "message": "Stato di protezione"
+  },
   "read_more_on_whotracks_me": {
     "message": "Scopri di più su WhoTracks.Me"
   },
@@ -375,14 +473,23 @@
   "resume": {
     "message": "Riattiva"
   },
+  "save": {
+    "message": "Salva"
+  },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "Salva e sincronizza le tue impostazioni personalizzate tra browser e dispositivi."
   },
   "search_engine_redirect_protection": {
     "message": "Protezione dal reindirizzamento dei motori di ricerca"
   },
+  "search_for_a_tracker_or_organization___": {
+    "message": "Cerca un sito Tracker o un'organizzazione..."
+  },
   "search_website___": {
     "message": "Ricerca sito web..."
+  },
+  "set_blocking_preference": {
+    "message": "Imposta preferenza di blocco"
   },
   "settings": {
     "message": "Impostazioni"
@@ -392,6 +499,9 @@
   },
   "setup_successful": {
     "message": "Configurazione completata correttamente"
+  },
+  "show_all": {
+    "message": "Mostra tutto"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "Mostra l’anteprima Tracker accanto ai risultati di ricerca."
@@ -424,16 +534,19 @@
     "message": "Termini e Condizioni"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "Grazie per aver sostenuto Ghostery nel suo impegno per un web in cui la privacy sia un diritto umano fondamentale!"
+  },
+  "tracker_database": {
+    "message": "Database Tracker"
+  },
+  "trackers": {
+    "message": "Tracker"
   },
   "trackers_blocked": {
     "message": "Tracker bloccati"
   },
   "trackers_count": {
     "message": "Conteggio tracker"
-  },
-  "trackers_detected": {
-    "message": "Tracker rilevati"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Tracker rilevati da Ghostery su questo sito web:&nbsp;$${0}"
@@ -446,6 +559,29 @@
   },
   "trackers_wheel": {
     "message": "Ruota tracker"
+  },
+  "trust_all__recommended_": {
+    "message": "Fiducia in tutti (consigliato)"
+  },
+  "trust_on_this_website": {
+    "message": "Considera affidabile su questo sito"
+  },
+  "trusted": {
+    "message": "Considerati affidabili"
+  },
+  "trusted___tracker_list": {
+    "message": "Considerati affidabili",
+    "description": "Plural form - list of trusted trackers"
+  },
+  "trusted__@_0_": {
+    "message": "Considerati affidabili: $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
+  },
+  "trusted_on_all_websites": {
+    "message": "Considerati affidabili su tutti i siti"
+  },
+  "trusted_on_this_website": {
+    "message": "Considerati affidabili su questo sito"
   },
   "unidentified": {
     "message": "Non identificato",
@@ -460,6 +596,9 @@
   "urls_observed": {
     "message": "URL osservati"
   },
+  "view_activity_details": {
+    "message": "Visualizza i dettagli delle attività"
+  },
   "visit_our_blog": {
     "message": "Visita il nostro blog"
   },
@@ -471,6 +610,9 @@
   },
   "website": {
     "message": "Sito web"
+  },
+  "website_exceptions": {
+    "message": "Eccezioni al sito web"
   },
   "websites": {
     "message": "Siti web"
@@ -497,7 +639,7 @@
     "message": "Senza le funzionalità di privacy attivate, è disponibile solo la funzionalità di base di identificazione dei tracker."
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "Fantastico!"
   },
   "you_are_signed_in_as_": {
     "message": "Hai effettuato l’accesso come:"
