--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -2,6 +2,14 @@
   "@_0__left": {
     "message": "$${0} 残"
   },
+  "@_0__will_be_blocked_on_this_website_": {
+    "message": "$${0}はこのウェブサイトでブロックされます。",
+    "description": "A tracker will be trusted on this website."
+  },
+  "@_0__will_be_trusted_on_this_website_": {
+    "message": "$${0}はこのウェブサイトで信頼可能です。",
+    "description": "A tracker will be trusted on this website."
+  },
   "1_day": {
     "message": "1日"
   },
@@ -17,8 +25,23 @@
   "ad_blocking": {
     "message": "広告ブロッキング"
   },
-  "additional_permissions_required": {
-    "message": "必要な追加パーミッション"
+  "add": {
+    "message": "追加"
+  },
+  "add_@_0__as_exception": {
+    "message": "$${0}を例外として追加",
+    "description": "Add domain as exception"
+  },
+  "add_website_exception": {
+    "message": "ウェブサイトの例外を追加"
+  },
+  "adjusted___tracker": {
+    "message": "調整済み",
+    "description": "Singular form - tracker has been adjusted"
+  },
+  "adjusted___tracker_list": {
+    "message": "調整済み",
+    "description": "Plural form - list of adjusted trackers"
   },
   "adult_advertising": {
     "message": "アダルト広告",
@@ -56,8 +79,34 @@
   "become_a_contributor": {
     "message": "Contributorになる"
   },
+  "block_all__recommended_": {
+    "message": "すべてをブロック (推奨)"
+  },
+  "block_on_this_website": {
+    "message": "このウェブサイトでブロック"
+  },
+  "blocked": {
+    "message": "ブロックされた対象"
+  },
+  "blocked___tracker_list": {
+    "message": "ブロックされた対象",
+    "description": "Plural form - list of blocked trackers"
+  },
+  "blocked__@_0_": {
+    "message": "ブロック済み: $${0}",
+    "description": "A number of blocked trackers, eg: 'Blocked: 2'"
+  },
+  "blocked_on_all_websites": {
+    "message": "すべてのウェブサイトでブロック済み"
+  },
+  "blocked_on_this_website": {
+    "message": "このウェブサイトでブロック済み"
+  },
   "cancel": {
     "message": "キャンセル"
+  },
+  "category": {
+    "message": "カテゴリ"
   },
   "cdn": {
     "message": "CDN",
@@ -68,6 +117,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "検索バーの横にあるパズルのアイコンをクリックし、Ghosteryをツールバーに固定します。"
+  },
+  "collapse": {
+    "message": "折り畳む"
   },
   "comments": {
     "message": "コメント",
@@ -83,14 +135,24 @@
   "contact_support": {
     "message": "お問い合わせ先"
   },
+  "contribute_to_ghostery_tracker_database_on_github": {
+    "message": "GithubでGhosteryトラッカーデータベースに寄付"
+  },
   "contributor": {
     "message": "Contributor"
   },
   "copied_to_clipboard": {
     "message": "クリップボードにコピー済み"
   },
+  "country": {
+    "message": "国"
+  },
   "create_account": {
     "message": "アカウントを作成"
+  },
+  "current_protection_status_for_@_0__": {
+    "message": "$${0}の現在の保護ステータス: ",
+    "description": "Current protection status for a tracker"
   },
   "customer_interaction": {
     "message": "顧客インタラクション",
@@ -154,9 +216,15 @@
   "enabled": {
     "message": "有効になっています"
   },
+  "enter_website_url": {
+    "message": "ウェブサイトのURLを入力"
+  },
   "essential": {
     "message": "必需",
     "description": "Tracker category name"
+  },
+  "expand": {
+    "message": "展開"
   },
   "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
     "message": "簡単なステップで、Ghosteryの広告ブロッキングを検索エンジンへと拡張できます。"
@@ -164,6 +232,9 @@
   "extensions": {
     "message": "拡張機能",
     "description": "Tracker category name"
+  },
+  "for_all_websites": {
+    "message": "すべてのウェブサイトに対して"
   },
   "for_more_information_read_our_full": {
     "message": "詳細はこちらをご覧ください"
@@ -274,6 +345,9 @@
   "learn_more_about_youtube_s_challenges_to_ad_blockers": {
     "message": "広告ブロッカーに対するYouTubeの挑戦についてもっと知る"
   },
+  "load_more": {
+    "message": "さらに読み込む"
+  },
   "manifest_name": {
     "message": "Ghosteryトラッカー＆広告ブロック - プライバシー広告ブロック"
   },
@@ -290,8 +364,14 @@
     "message": "さまざまな",
     "description": "Tracker category name"
   },
+  "modify_the_recommended_blocking_settings_for_every_website_": {
+    "message": "それぞれのウェブサイトについて推奨されるブロック設定を変更します。"
+  },
   "more_ad_blocking_available": {
     "message": "利用できるその他の広告ブロッキング"
+  },
+  "more_in_this_organization": {
+    "message": "この組織の詳細"
   },
   "my_account": {
     "message": "アカウント"
@@ -302,14 +382,20 @@
   "never_consent": {
     "message": "決して同意しない"
   },
-  "no_trackers_detected": {
-    "message": "トラッカーは検出されませんでした"
+  "no_activities_detected": {
+    "message": "アクティビティは検出されませんでした"
+  },
+  "no_websites_exceptions_added_yet": {
+    "message": "ウェブサイトの例外はまだ追加されていません"
   },
   "number_of_trackers_with_blocked_network_requests_": {
     "message": "ネットワークリクエストがブロックされたトラッカーの数。"
   },
   "number_of_trackers_with_removed_cookies_or_fingerprints_": {
     "message": "Cookieまたはフィンガープリントが削除されたトラッカーの数。"
+  },
+  "observed_activities": {
+    "message": "観察済みのアクティビティ"
   },
   "off": {
     "message": "オフ"
@@ -323,9 +409,18 @@
   "open_youtube_in_a_private_window": {
     "message": "YouTubeをプライベートウィンドウで開く"
   },
+  "organization": {
+    "message": "組織"
+  },
+  "organization_s_website": {
+    "message": "組織のウェブサイト"
+  },
   "other": {
     "message": "その他",
     "description": "Tracker category name"
+  },
+  "our_recommendation_for_this_activity": {
+    "message": "このアクティビティのおすすめ"
   },
   "pause_on_this_site": {
     "message": "このサイトでのポーズ"
@@ -357,6 +452,9 @@
   "privacy_protection": {
     "message": "プライバシー保護"
   },
+  "protection_status": {
+    "message": "保護ステータス"
+  },
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Meで詳細を見る"
   },
@@ -375,14 +473,23 @@
   "resume": {
     "message": "再開"
   },
+  "save": {
+    "message": "保存"
+  },
   "save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
     "message": "ブラウザとデバイス間でカスタム設定を保存・同期しましょう。"
   },
   "search_engine_redirect_protection": {
     "message": "検索エンジンのリダイレクト保護"
   },
+  "search_for_a_tracker_or_organization___": {
+    "message": "トラッカーや組織を検索..."
+  },
   "search_website___": {
     "message": "サイトを検索..."
+  },
+  "set_blocking_preference": {
+    "message": "ブロック設定に進む"
   },
   "settings": {
     "message": "設定"
@@ -392,6 +499,9 @@
   },
   "setup_successful": {
     "message": "セットアップ成功"
+  },
+  "show_all": {
+    "message": "すべてを表示"
   },
   "shows_the_tracker_preview_beside_search_results_": {
     "message": "検索結果の横にトラッカープレビューを表示します。"
@@ -424,16 +534,19 @@
     "message": "利用規約"
   },
   "thank_you_for_your_support_in_ghostery_s_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-    "message": "Thank you for your support in Ghostery's fight for a web where privacy is a basic human right!"
+    "message": "Ghosteryはウェブ上でのプライバシーを基本的人権だと考え、それに対する対策を講じています。いつもサポートいただき、ありがとうございます。"
+  },
+  "tracker_database": {
+    "message": "トラッカー・データベース"
+  },
+  "trackers": {
+    "message": "トラッカー"
   },
   "trackers_blocked": {
     "message": "ブロックされたトラッカー"
   },
   "trackers_count": {
     "message": "トラッカーカウント"
-  },
-  "trackers_detected": {
-    "message": "検出されたトラッカー"
   },
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "このウェブサイト上でGhosteryがトラッカーを検出:&nbsp;$${0}"
@@ -446,6 +559,29 @@
   },
   "trackers_wheel": {
     "message": "トラッカーホイール"
+  },
+  "trust_all__recommended_": {
+    "message": "すべてを信頼する（推奨)"
+  },
+  "trust_on_this_website": {
+    "message": "このウェブサイトで信頼"
+  },
+  "trusted": {
+    "message": "信頼済み"
+  },
+  "trusted___tracker_list": {
+    "message": "信頼済み",
+    "description": "Plural form - list of trusted trackers"
+  },
+  "trusted__@_0_": {
+    "message": "信頼済み: $${0}",
+    "description": "A number of trusted trackers eg: 'Trusted: 2'"
+  },
+  "trusted_on_all_websites": {
+    "message": "すべてのウェブサイトで信頼済み"
+  },
+  "trusted_on_this_website": {
+    "message": "このウェブサイトで信頼済み"
   },
   "unidentified": {
     "message": "未知",
@@ -460,6 +596,9 @@
   "urls_observed": {
     "message": "観察済みURL"
   },
+  "view_activity_details": {
+    "message": "アクティビティの詳細を表示"
+  },
   "visit_our_blog": {
     "message": "ブログを見る"
   },
@@ -471,6 +610,9 @@
   },
   "website": {
     "message": "ウェブサイト"
+  },
+  "website_exceptions": {
+    "message": "ウェブサイトの例外"
   },
   "websites": {
     "message": "ウェブサイト"
@@ -497,7 +639,7 @@
     "message": "プライバシー機能が有効になっていない場合、トラッカーの命名の基本的な機能のみが利用可能です。"
   },
   "you_are_awesome_": {
-    "message": "You are awesome!"
+    "message": "ありがとうございます！"
   },
   "you_are_signed_in_as_": {
     "message": "次のユーザーでサインインしています:"
